syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.hzb.lib.user.proto";
option java_outer_classname = "UserProto";

package user;

service UserService {
  rpc getUserInfoPerms (UserGetRequest) returns (UserGetReply) {}
}

message UserGetRequest{
  string userName = 1;
}

message UserGetReply {
  User user = 1;
  Permissions permissions = 2;
}

message User {
  sint64 userId = 1;
  string userName = 2;
  string nickName = 3;
  string email = 4;
  string phoneNumber = 5;
  string sex = 6;
  string avatar = 7;
  Password password = 8;
  string status = 9;
  string delFlag = 10;
  string loginIp = 11;
  string loginDate = 12;
  string createBy = 13;
  string createTime = 14;
  string updateBy = 15;
  string updateTime = 16;
  string remark = 17;
}

message Password {
  string password = 1;
}

message Permissions {
  repeated string permissions = 1;
}